--- a/src/Services/CatalogService/CatalogService.Api/appsettings.json
+++ b/src/Services/CatalogService/CatalogService.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CatalogDB": "server=(localdb)\\mssqllocaldb;initial catalog = CatalogDB;integrated security=true"
+  },
+  "CatalogSettings": {
+    "PicBaseUrl": "Pics/"
+  },
+  "ConsulConfig": {
+    "Address": "http://164.92.251.134:8500"
+  }
 }
