--- a/src/ApiGateways/WebApiGateway/Web.ApiGateway/Properties/launchSettings.json
+++ b/src/ApiGateways/WebApiGateway/Web.ApiGateway/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7125;http://localhost:5024",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
