--- a/src/Services/CatalogService/CatalogService.Api/Properties/launchSettings.json
+++ b/src/Services/CatalogService/CatalogService.Api/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7032;http://localhost:5289",
+      "applicationUrl": "http://localhost:5004",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
