--- a/src/Services/IdentityService/IdentityService.Api/appsettings.json
+++ b/src/Services/IdentityService/IdentityService.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConsulConfig": {
+    "Address": "http://164.92.251.134:8500"
+  }
 }
