configuring consul and ocelot

--- a/src/ApiGateways/WebApiGateway/Web.ApiGateway/appsettings.json
+++ b/src/ApiGateways/WebApiGateway/Web.ApiGateway/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConsulConfig": {
-    "Address": "http://164.92.251.134:8500"
-  }
+  "AllowedHosts": "*"
 }
